feat: implement validator overview
